--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="js/sierpinsky_sieve.js" type="text/javascript"></script>
+    <script src="cljs-out/dev-main.js" type="text/javascript"></script>
   </body>
 </html>
