--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,7 +6,15 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div id="app"></div>
+    <main>
+      <div id="app" class="contained"></div>
+      <footer class="contained">
+        <span>© 2017-2024 Charles L.G. Comstock</span>
+        <a href="https://dgtized.github.io/">(portfolio)</a>
+        <a href="https://github.com/dgtized/sierpinski-sieve">(github)</a>
+        <span id="revision"><code>rev:abcdef12</code></span>
+      </footer>
+    </main>
     <script src="cljs-out/dev-main.js" type="text/javascript"></script>
   </body>
 </html>
